Fixing bug 496434 -  Mailnews shutdown service doesn't respect restarting flags. r=Standard8 sr=bienvenu